--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<div class="main maintitle">
 			<h1>>hello world</h1>
 			<p>Hi im @hsnmrdgl, welcome to my personal page!</p>
-			<a href="https://github.com/hsnmrdgl" title="Github"><i class="fa fa-github fa-lg"></i></a>
-			<a href="https://www.linkedin.com/in/hcaglarmuradoglu1/" title="Linkedin"><i class="fa fa-linkedin fa-lg"></i></a>
-			<a href="https://instagram.com/hsnmrdgl" title="Instagram"><i class="fa fa-instagram fa-lg"></i></a>
-			<a href="https://twitter.com/hsnmrdgl" title="Twitter"><i class="fa fa-twitter fa-lg"></i></a>
+			<a href="https://github.com/hsnmrdgl" target="_blank" title="Github"><i class="fa fa-github fa-lg"></i></a>
+			<a href="https://www.linkedin.com/in/hcaglarmuradoglu1/" target="_blank" title="Linkedin"><i class="fa fa-linkedin fa-lg"></i></a>
+			<a href="https://instagram.com/hsnmrdgl" target="_blank" title="Instagram"><i class="fa fa-instagram fa-lg"></i></a>
+			<a href="https://twitter.com/hsnmrdgl" target="_blank" title="Twitter"><i class="fa fa-twitter fa-lg"></i></a>
 			
 		</div>
 		<div class="main mainfilter"></div>
