--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>hsnmrdgl | Personal Website</title>
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 
 <body>
@@ -13,10 +13,11 @@
 		<div class="main maintitle">
 			<h1>>hello world</h1>
 			<p>Hi im @hsnmrdgl, welcome to my personal page!</p>
-			<a href="https://github.com/hsnmrdgl" target="_blank" title="Github"><i class="fa fa-github fa-lg"></i></a>
-			<a href="https://www.linkedin.com/in/hcaglarmuradoglu1/" target="_blank" title="Linkedin"><i class="fa fa-linkedin fa-lg"></i></a>
-			<a href="https://instagram.com/hsnmrdgl" target="_blank" title="Instagram"><i class="fa fa-instagram fa-lg"></i></a>
-			<a href="https://twitter.com/hsnmrdgl" target="_blank" title="Twitter"><i class="fa fa-twitter fa-lg"></i></a>
+			<a href="https://github.com/hsnmrdgl" target="_blank" title="Github"><i class="fab fa-github fa-lg"></i></a>
+			<a href="https://www.hackerrank.com/hsnmrdgl" target="_blank" title="Hackerrank"><i class="fab fa-hackerrank fa-lg"></i></a>
+			<a href="https://www.linkedin.com/in/hcaglarmuradoglu1/" target="_blank" title="Linkedin"><i class="fab fa-linkedin fa-lg"></i></a>
+			<a href="https://instagram.com/hsnmrdgl" target="_blank" title="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+			<a href="https://twitter.com/hsnmrdgl" target="_blank" title="Twitter"><i class="fab fa-twitter fa-lg"></i></a>
 			
 		</div>
 		<div class="main mainfilter"></div>
